--- a/djangoproject/gestion_stock/templates/lettrevoitureEntreemodify.html
+++ b/djangoproject/gestion_stock/templates/lettrevoitureEntreemodify.html
@@ -142,11 +142,9 @@
                                     <div class="row">
                                         <div class="col">
                                             <div class="row">
-                                                <div class="col-1">
-                                                    <button id="accesslve" style="width: 50%; height: 30px;" class="rounded mt-4"><i style="font-size: 50%" class="fa fa-arrow-right"></i></button>
-                                                </div>
                                                 <div class="col">
                                                     <div class="selsel">
+                                                        <button id="accesslve" class="btn-sm btn-grey"><i class="fa fa-arrow-right"></i></button>
                                                         <label for="transporteur">transporteur:</label>
                                                         <select class="form-control" id="transporteur">
                                                             <script type="text/javascript">
