--- a/djangoproject/gestion_stock/templates/bonLivraisonEntreeadd.html
+++ b/djangoproject/gestion_stock/templates/bonLivraisonEntreeadd.html
@@ -1,8 +1,6 @@
 {% extends user.is_authenticated|yesno:"base_generic.html,empty.html" %}
 
 {% block content %}
-<html>
-
 <style>
     .ui-dialog-titlebar-close {
         visibility: hidden;
@@ -26,27 +24,23 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-7">
+        <div class="col">
             <div class="border shadow-lg p-2 mb-3 bg-white rounded">
-                <div class="row">
-                    <div class="col">
-                        <h3 class="text-center"> identification BL</h3>
-                    </div>
-                </div>
-                <br>
+                <h3 class="text-center"> identification BL</h3>
                 <div class="container">
                     <div class="row">
-                        <div class="text-center">
-                            <div class="row">
-                                <div class="col">
-                                    identifiant:<br><input type="text" id="umid" disabled class="form-control">
+                        <div class="row">
+                            <div class="col">
+                                <div class="form-group">
+                                    <label for="umid">identifiant:</label>
+                                    <input type="text" id="umid" disabled class="form-control">
                                 </div>
-                                <div class="col-1">
-                                    <br><button class="ml-md-n3" id="accesslve"><i class="fa fa-arrow-right"></i></button>
-                                </div>
-                                <div class="col">
-                                    <div class="selsel">
-                                        Client:<br><select class="form-control" id="client">
+                            </div>
+                            <div class="col">
+                                <div class="form-group">
+                                    <button class="btn-sm btn-outline-light-blue" id="btnusless"><i class="fa fa-arrow-right"></i></button>
+                                    <label for="client">Name:</label><br>
+                                    <select class="form-control" id="client">
                                         <script type="text/javascript">
                                             $(document).ready(function() {
                                                 var i = 0;
@@ -64,68 +58,81 @@
                                             });
                                         </script>
                                     </select>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col">
+                                <div class="form-group">
+                                    <button class="btn-group-sm btn-outline-light-blue" id="accesslve"><i class="fa fa-arrow-right"></i></button>
+                                    <label for="lve">L.V.E:</label>
+                                    <input type="text" id="lve" disabled class="form-control">
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="form-group">
+                                    <label for="zone">Zone:</label>
+                                    <input type="text" id="zone" disabled class="form-control">
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="selsel">
+                                    <div class="form-group">
+                                        <label for="fournisseur">fournisseur:</label>
+                                        <select class="form-control" id="fournisseur">
+                                            <script type="text/javascript">
+                                                $(document).ready(function() {
+                                                    var i = 0;
+                                                    "{% for items in four %}"
+                                                    console.log("fournisseur");
+                                                    //to change
+                                                    var name = "{{ items.nom }}";
+                                                    var oldname;
+                                                    if (i == 0)
+                                                        $("#fournisseur").append(new Option("{{ items.nom }}", "{{ items.nom }}"));
+                                                    else if (name != oldname)
+                                                        $("#fournisseur").append(new Option("{{ items.nom }}", "{{ items.nom }}"));
+                                                    oldname = name;
+                                                    i = 1;
+                                                    "{% endfor %}"
+                                                });
+                                            </script>
+                                        </select>
                                     </div>
                                 </div>
                             </div>
-                            <div class="row">
-                                <div class="col-1">
-                                    <br><button class="mt-lg-1" id="accesslve"><i class="fa fa-arrow-right"></i></button>
-                                </div>
-                                <div class="col">
-                                    lettre de voiture :<br><input type="text" id="lve" disabled class="form-control">
-                                </div>
-                                <div class="col-4">zone:<br><input type="text" id="zone" disabled class="form-control">
-                                </div>
-                                <div class="col">
-                                    <div class="selsel">
-                                        fournisseur:<br><select class="form-control" id="fournisseur">
-                                        <script type="text/javascript">
-                                            $(document).ready(function() {
-                                                var i = 0;
-                                                "{% for items in four %}"
-                                                console.log("fournisseur");
-                                                //to change
-                                                var name = "{{ items.nom }}";
-                                                var oldname;
-                                                if (i == 0)
-                                                    $("#fournisseur").append(new Option("{{ items.nom }}", "{{ items.nom }}"));
-                                                else if (name != oldname)
-                                                    $("#fournisseur").append(new Option("{{ items.nom }}", "{{ items.nom }}"));
-                                                oldname = name;
-                                                i = 1;
-                                                "{% endfor %}"
-                                            });
-                                        </script>
-                                    </select>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col">
-                                    <label for="inputnbl">numéro de Bl :</label>
+                        </div>
+                        <div class="row">
+                            <div class="col">
+                                <div class="form-group">
+                                    <label for="inputnbl">num BL:</label>
                                     <input id="inputnbl" class="form-control">
                                 </div>
-                                <div class="col">
-                                    <label for="inputMDEx">date de réception:</label>
+                            </div>
+                            <div class="col">
+                                <div class="form-group">
+                                    <label for="inputMDEx">date réception:</label>
                                     <input type="date" id="inputMDEx" class="form-control">
                                 </div>
-                                <div class="col">
-                                    <label for="inputqpl">quantité de palettes:</label>
+                            </div>
+                            <div class="col">
+                                <div class="form-group">
+                                    <label for="inputqpl">qte de palettes:</label>
                                     <input id="inputqpl" class="form-control">
                                 </div>
                             </div>
-                            <br>
-                            <div class="row">
-                                <div class="col">
-                                    <input type="button" class="btn btn-primary" id="addble" value="Save">
-                                </div>
+                        </div>
+                        <br>
+                        <div class="row">
+                            <div class="col">
+                                <input type="button" class="btn btn-primary" id="addble" value="Save">
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="col-5">
+        <div class="col-auto">
             <div class="border shadow-lg p-2 mb-3 bg-white rounded">
                 <h5 class="text-center"> <u>Unités de manutention entrée </u></h5>
                 <div class="container">
@@ -204,7 +211,7 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-5">
+        <div class="col-auto">
             <div class="border shadow-lg p-2 mb-3 bg-white rounded">
                 <div class="row">
                     <div class="col">
@@ -260,7 +267,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-3 mx-auto">
+        <div class="col-auto mx-auto">
             <div class="border shadow-lg p-2 mb-3 bg-white rounded">
                 <div class="col">
                     <h5 class="text-center"> <u> fichiers </u></h5>
@@ -683,11 +690,11 @@
                     console.log('{{ items.fk_TypeZone.nom }}');
                     $('#zone').val('{{ items.fk_TypeZone.nom }}');
                     '{% for items in zoned %}'
-                        if ('{{ items.fk_TypeZoneDepot.nom }}' == $('#zone').val().trim() || !'{{ items.fk_TypeZoneDepot.nom }}') {
-                            //$('#zone').val('{{ items.fk_TypeZone.nom }}');
-                            console.log("gg");
-                            $("#zatt").append(new Option("{{ items.nom }}", "{{ items.nom }}"));
-                        }
+                    if ('{{ items.fk_TypeZoneDepot.nom }}' == $('#zone').val().trim() || !'{{ items.fk_TypeZoneDepot.nom }}') {
+                        //$('#zone').val('{{ items.fk_TypeZone.nom }}');
+                        console.log("gg");
+                        $("#zatt").append(new Option("{{ items.nom }}", "{{ items.nom }}"));
+                    }
                     '{% endfor %}'
                     //$("#").append(new Option("{{ items.nom }}", "{{ items.nom }}"));
                 }
@@ -745,5 +752,4 @@
         });
     });
 </script>
-</html>
 {% endblock %}
